<resources>
    <string name="app_name">Travel Journal</string>
    <string name="manage_trip">Manage Trip</string>
    <string name="trip_name">Trip Name</string>
    <string name="destination">Destination</string>
    <string name="city_break">City break</string>
    <string name="sea_side">Sea side</string>
    <string name="mountains">Mountains</string>
    <string name="trip_type">Trip Type</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="dd_mm_yy">DD/MM/YY</string>
    <string name="price_eur">Price(eur)</string>
    <string name="rating">Rating</string>
    <string name="save">SAVE</string>
</resources>
