<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp75"
        android:background="@color/a_kind_of_blue"
        android:text="@string/manage_trip"
        android:textColor="@color/white"
        android:textSize="@dimen/space_25"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/space_15" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trip_name"
        android:textColor="@color/black"
        android:textSize="@dimen/space_17"
        android:layout_marginTop="@dimen/space_15"
        android:layout_marginLeft="@dimen/space_15"
        android:layout_marginBottom="@dimen/space_15"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp30"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp30"
            android:layout_height="match_parent"
            android:src="@drawable/iconfinder_info"
            android:layout_marginLeft="@dimen/space_20"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/space_20"/>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destination"
        android:textColor="@color/black"
        android:textSize="@dimen/space_17"
        android:layout_marginTop="@dimen/space_15"
        android:layout_marginLeft="@dimen/space_15"
        android:layout_marginBottom="@dimen/space_15"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp30"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp30"
            android:layout_height="match_parent"
            android:src="@drawable/Capture"
            android:layout_marginLeft="@dimen/space_20"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/space_20"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trip_type"
        android:textColor="@color/black"
        android:textSize="@dimen/space_17"
        android:layout_marginTop="@dimen/space_15"
        android:layout_marginLeft="@dimen/space_15"
        android:layout_marginBottom="@dimen/space_15"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/space_15">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_break"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sea_side"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mountains"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_eur"
        android:textColor="@color/black"
        android:textSize="@dimen/space_17"
        android:layout_marginTop="@dimen/space_15"
        android:layout_marginLeft="@dimen/space_15"
        android:layout_marginBottom="@dimen/space_15"/>

    <SeekBar
        android:id="@+id/seek_bar_money"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="12"
        android:layout_marginLeft="@dimen/space_20"
        android:layout_marginBottom="@dimen/space_20"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp30"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/space_10">

        <TextView
            android:layout_width="@dimen/dp0"
            android:layout_height="match_parent"
            android:text="@string/start_date"
            android:textColor="@color/black"
            android:textSize="@dimen/space_17"
            android:layout_marginLeft="@dimen/space_15"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="@dimen/dp0"
            android:layout_height="match_parent"
            android:text="@string/end_date"
            android:textColor="@color/black"
            android:textSize="@dimen/space_17"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/space_10">

        <EditText
            android:layout_width="@dimen/dp0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/grey"
            android:layout_marginLeft="@dimen/space_15"
            android:layout_marginRight="@dimen/space_15"
            android:hint="@string/dd_mm_yy"
            android:paddingLeft="@dimen/space_10"/>

        <EditText
            android:layout_width="@dimen/dp0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/grey"
            android:layout_marginLeft="@dimen/space_15"
            android:layout_marginRight="@dimen/space_15"
            android:hint="@string/dd_mm_yy"
            android:paddingLeft="@dimen/space_10"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:textColor="@color/black"
        android:textSize="@dimen/space_17"
        android:layout_marginTop="@dimen/space_15"
        android:layout_marginLeft="@dimen/space_15"
        android:layout_marginBottom="@dimen/space_10"/>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_15"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp60"
        android:layout_margin="@dimen/space_20"
        android:background="@color/a_kind_of_blue"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="@dimen/space_17"/>

</LinearLayout>